Java EE Initial Commit.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,7 @@
 <!--    <servlet-name>add</servlet-name>-->
 <!--    <url-pattern>/add</url-pattern>-->
 <!--  </servlet-mapping>-->
+  <welcome-file-list>
+    <welcome-file>/webapp/views/index.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
